--- a/css/style.css
+++ b/css/style.css
@@ -13,8 +13,12 @@ h1, h2, h3, h4, h5, h6, a, p {
 }
 
 nav {
+    position: sticky;
+    top: 0;
     max-height: 64px;
+    z-index: 1000;
     border-bottom: 1px solid #C6C4C4;
+    background-color: #fff;
 }
 .nav-container {
     display: flex;
