--- a/css/style.css
+++ b/css/style.css
@@ -110,6 +110,25 @@ header {
 }
 .header-right-container {
     max-width: 50%;
+    color: #fff;
+    font-weight: 700;
+}
+.svg-container {
+    position: relative;
+}
+.actual-score {
+    font-size: 148px;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+}
+.score-nums {
+    font-size: 32px;
+    width: 80%;
+    display: flex;
+    justify-content: space-between;
+    margin: -120px auto 0 auto;
 }
 
 main {
